--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Thomas' portfolio</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" media="screen" vcharset="utf-8">
-    <link href=https://fonts.googleapis.com/css?family=Lato:100,300 rel=stylesheet type=text/css>
-    <link rel="stylesheet" href="css/style.css" media="screen" vcharset="utf-8">
+    <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel=stylesheet type=text/css>
+    <link rel="stylesheet" href="css/style.css" media="screen">
   </head>
   <body>
     <div class="container">
