--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-md-4 col-md-offset-0">
-          <img class="title-logo img-responsive" src="img/opt/udacity_logo.png" alt="Udacity Logo" />
-        </div>
-        <header>
+
+        <header class="row">
+          <div class="col-xs-12 col-md-4 col-md-offset-0">
+            <img class="title-logo img-responsive" src="img/opt/udacity_logo.png" alt="Udacity Logo" />
+          </div>
           <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-0 text-right text-uppercase">
             <h1 class="text-thin title-super">Thomas Hebenstreit</h1>
             <h4 class="subheader">Front-end Ninja</h4>
           </div>
         </header>
-      </div>
       <div class="row">
         <div class="col-md-12">
           <hr>
